update all files

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <nav class="navbar navbar-dark navbar-expand-sm">
-        <a href="/" class="navbar-brand">TravelWithMe.com</a>
+        <a href="https://www.malaysia.travel/de-de/de" target="_blank" class="navbar-brand">TravelWithMe.com</a>
 
         <button
           class="navbar-toggler ml-auto"
