--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             <div class="site-wide-alert alert alert-warning">
               <strong>Sale Now On!</strong> Grab your chance to win free ticket
               to your own destination.
-              <a href="https://www.malaysia.travel/de-de/de" target="_blank"
+              <a href="https://www.malaysia.travel/en/us/travel-packages" target="_blank"
                 >See here for details!</a
               >
             </div>
           </div>
         </div>
       </div>
+      <!-- Nav -->
       <nav class="navbar navbar-dark navbar-expand-sm">
         <a href="https://www.malaysia.travel/de-de/de" target="_blank" class="navbar-brand">TravelWithMe.com</a>
 
@@ -92,8 +93,10 @@
         </div>
       </nav>
     </div>
+    <!--------/.Nav--------->
+        <!------Callout----->
     <div class="container-fluid callout-container">
-      <!------Callout----->
+  
       <div class="overlay"></div>
       <div class="row">
         <div class="col-12">
@@ -115,7 +118,7 @@
               Sign Up!
             </button>
             <p class="text-muted">
-              <small>You must be over 18 to sign up to our service. .</small>
+              <small>*You must be over 18 to sign up to our service.</small>
             </p>
           </section>
         </div>
