--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto">
-            <li class="active nav-item mr-2">
-              <a class="nav-link" href="/">Home</a>
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item mr-2">
               <a class="nav-link" href="./img/under.png" target="_blank"
@@ -86,9 +86,7 @@
               </div>
             </li>
 
-            <li class="nav-item mr-2 d-block d-sm-none">
-              <a class="nav-link" href="/login">Sign In / Sign Up</a>
-            </li>
+           
           </ul>
         </div>
       </nav>
